added custom key authentication and username and password authentication not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.datasource.initialization-mode=always
 # Execute the data insertion script
 #spring.datasource.data=classpath:insert-data.sql
 
+#key custom authentication
+my.key=key1
+
 # Single user details
 spring.security.user.name=admin
 spring.security.user.password=admin
